added_test-auth-controller