@@ -32,6 +32,8 @@
 		<hibernate-core.version>6.4.4.Final</hibernate-core.version>
 		<jjwt-tocken.verdion>0.11.5</jjwt-tocken.verdion>
 		<spring-dotenv.version>3.0.0</spring-dotenv.version>
+		<mockito-core.version>5.4.0</mockito-core.version>
+		<net-byte-boddy.version>1.15.11</net-byte-boddy.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -106,6 +108,28 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito-core.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+			<version>${net-byte-boddy.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -126,6 +150,14 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.1.2</version>
+				<configuration>
+					<argLine>-XX:+EnableDynamicAgentLoading -Djdk.instrument.traceUsage=true</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
